# glRemix

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  README.md  format.ps1
.github/workflows/: build.yml  clang-format-check.yml
cmake/: copy_if_exists.cmake  deploy_shim.cmake  shared_files.cmake  shim_helper.cmake
docs/: GL_SUPPORT_STATUS.md  IPC.md  dll_best_practices.md  synchronization.md
glRemixRenderer/: CMakeLists.txt  application.cpp  application.h  constants.h  debug_window.cpp  debug_window.h  descriptor_pager.cpp  descriptor_pager.h  helper.h  hlsl_compat.h  main.cpp  mesh_loader.cpp  mesh_loader.h  rt_app.cpp  rt_app.h  shared_structs.h  structs.h
glRemixRenderer/dx/: d3d12_as.h  d3d12_barrier.cpp  d3d12_barrier.h  d3d12_buffer.h  d3d12_command_allocator.h  d3d12_context.cpp  d3d12_context.h  d3d12_descriptor.h  d3d12_descriptor_heap.cpp  d3d12_descriptor_heap.h  d3d12_fence.h  d3d12_pipeline_builder.cpp  d3d12_pipeline_builder.h  d3d12_pipeline_types.cpp  d3d12_pipeline_types.h  d3d12_queue.h  d3d12_texture.h
glRemixRenderer/gl/: gl_command_utils.h  gl_driver.cpp  gl_driver.h  gl_matrix_stack.cpp  gl_matrix_stack.h  gl_state.h
glRemixRenderer/shaders/: shaders.config
glRemixRenderer/shaders/raster/: triangle.hlsl
glRemixRenderer/shaders/rt/: raytracing.hlsl
glRemixShim/: CMakeLists.txt  dllmain.cpp  export_macros.h  frame_recorder.cpp  frame_recorder.h  framerecorder.h  framework.h  gl_exports.cpp  gl_extensions.inl  gl_hooks.cpp  gl_hooks.h  gl_loader.cpp  gl_loader.h  gl_staging.cpp  gl_staging.h  undef_export_macros.h  wgl_dispatch.cpp  wgl_export_aliases.inl  wgl_exports.cpp
glRemixShim/cmake/: shim_compile_spec.cmake  shim_sources.cmake
glRemixShim/scripts/: generate_gl_wrappers.py  generate_wgl_wrappers.py
scripts/: format.ps1  mpl.py
shared/: constants.h  debug_utils.h  gl_commands.h  gl_utils.h  ipc_protocol.cpp  ipc_protocol.h  ipc_protocol.inl  math_utils.h  shared_memory.cpp  shared_memory.h
shared/containers/: free_list_vector.h
